fix: #51 SonarQube 경고 수정 및 javadoc 주석 추가